--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
           <h1>Official Negotiation Updates</h1>
           <p>Corewell Health East & Teamsters Local 2024</p>
           <p>Tentative Agreements & Updates</p>
-
           <small><strong>Last updated:</strong> August 7, 2025</small>
         </div>
       </div>
@@ -27,9 +26,10 @@
     <p>This site is your official source for tracking all Tentative Agreements (TAs) and Negotiation Updates between Corewell Health East and Teamsters Local 2024. As each article of the contract is finalized, it will be posted here. Our goal is to provide transparency. This allows you to clearly see the agreements that have been secured and understand their impact.</p>
   </div>
 </section>
+
 <details id="tentative-agreements" closed>
 <summary class="ta-title">
-  <span class="ta-label">Tentative Agreements</span>
+  <span class="ta-section-title">Tentative Agreements</span>
 </summary>
 
   <div class="ta-article">
@@ -46,9 +46,9 @@
     </div>
   </div>
   
-    <div class="ta-article">
+  <div class="ta-article">
     <div class="ta-header">
-      <h3> Agreement</h3>
+      <h3>Agreement</h3>
       <div class="ta-meta">
         <span>✅ Agreed on: August 7, 2025</span>
       </div>
@@ -113,117 +113,57 @@
     </div>
   </div>
 
-<div class="ta-article">
-  <div class="ta-header">
-    <h3>
-      2025 Economic Agreement
-      <span class="ta-label">MOA</span>
-    </h3>
-    <div class="ta-meta">
-      <span>✅ Agreed on: July 24, 2025</span
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>
+        2025 Economic Agreement
+        <span class="ta-badge">MOA</span>
+      </h3>
+      <div class="ta-meta">
+        <span>✅ Agreed on: July 24, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+        Corewell Health East (“Hospital”) and Teamsters Local Union No. 2024 (“Union”) enter into this Memorandum of Agreement (“MOA”) as follows.
+      </p>
+
+      <p>
+        1. In order to expedite the negotiation process between the parties; because the Union has now provided the full 2025 economic proposal to the Hospital; and in order for the Hospital to recognize the bargaining unit employees’ hard work and diligent efforts to serve the Hospital’s patients’ best interests, the Hospital shall implement as soon as reasonably possible the following economic benefits to the Registered Nurses the Union represents retroactive to the dates the Hospital implemented these to non-bargaining unit employees.
+      </p>
+
+      <p class="subpoint">a. The March 2025 annual wage increases for eligible employees as defined in the annual wage increase announcements/guidelines as appended hereto;</p>
+      <p class="subpoint">b. The Base Pay Market Review implemented and tier adjustments [if any] for eligible Advanced Practice Providers as defined in the Base Pay Market Review announcements/guidelines as appended hereto;</p>
+      <p class="subpoint">c. The $250.00 Special Appreciation Bonus for eligible employees as defined in the Special Appreciation Bonus announcements/guidelines as appended hereto;</p>
+      <p class="subpoint">d. The premium pay adjustments for eligible employees as defined in the premium pay adjustment announcements/guidelines as appended hereto;</p>
+      <p class="subpoint">e. The Matching Contribution to the 403(b) Retirement Savings Plan for eligible employees as defined in the Matching Contribution to the 403(b) Retirement Savings Plan announcements/guidelines as appended hereto; and</p>
+      <p class="subpoint">f. The parties acknowledge that this MOA includes the Hospital’s commitment to provide to bargaining unit employees any and all future wage, benefit and retirement adjustments provided to non-bargaining unit employees for the 2025 calendar year consistent with any guidelines established or announcements made. The Hospital agrees to provide notice to the Union not less than seven (7) calendar days prior to the implementation of any future wage, benefit and retirement adjustment to non-bargaining unit employees.</p>
+
+      <p>
+        2. The Hospital certifies that Paragraph 1 a. through e. represents all of the economic increases granted thus far to non-bargaining unit employees including Organ Donor Leave.
+      </p>
+
+      <p>
+        3. The Union recognizes that granting these increases retroactive to the dates they were implemented for non-bargaining unit employees represents an economic impact to the Hospital. Therefore, if the Hospital accepts this MOA, the Union agrees to the following.
+      </p>
+
+      <p class="subpoint">a. Accept the provisions stated in 1 a. through f. above as the entire economic package for the 2025 calendar year. The Union will not request any additional wage or benefit increases during bargaining for 2025 in exchange for this MOA.</p>
+      <p class="subpoint">b. The Union will withdraw with prejudice and take all steps necessary to encourage the NLRB to dismiss with prejudice any and all current unfair labor practice charges related in any way to the items identified in 1 a. through e. above.</p>
+      <p class="subpoint">c. The Union agrees that it will review and evaluate a list which Hospital provides within a reasonable time not to exceed forty-five (45) calendar days after this MOA is executed to confirm that the bargaining unit employees are receiving the proper adjustments consistent with Paragraph 1 a. through f. above. Once the Union has approved the list, Hospital will make payment under paragraph 1 a. above within a reasonable period of time not to exceed forty-five (45) calendar days.</p>
     </div>
   </div>
-  <div class="ta-content">
-    <p>
-      Corewell Health East (“Hospital”) and Teamsters Local Union No. 2024 (“Union”) enter into this Memorandum of Agreement (“MOA”) as follows.
-    </p>
-
-    <p>
-      1. In order to expedite the negotiation process between the parties; because the Union has now provided the full 2025 economic proposal to the Hospital; and in order for the Hospital to recognize the bargaining unit employees’ hard work and diligent efforts to serve the Hospital’s patients’ best interests, the Hospital shall implement as soon as reasonably possible the following economic benefits to the Registered Nurses the Union represents retroactive to the dates the Hospital implemented these to non-bargaining unit employees.
-    </p>
-
-    <p class="subpoint">a. The March 2025 annual wage increases for eligible employees as defined in the annual wage increase announcements/guidelines as appended hereto;</p>
-    <p class="subpoint">b. The Base Pay Market Review implemented and tier adjustments [if any] for eligible Advanced Practice Providers as defined in the Base Pay Market Review announcements/guidelines as appended hereto;</p>
-    <p class="subpoint">c. The $250.00 Special Appreciation Bonus for eligible employees as defined in the Special Appreciation Bonus announcements/guidelines as appended hereto;</p>
-    <p class="subpoint">d. The premium pay adjustments for eligible employees as defined in the premium pay adjustment announcements/guidelines as appended hereto;</p>
-    <p class="subpoint">e. The Matching Contribution to the 403(b) Retirement Savings Plan for eligible employees as defined in the Matching Contribution to the 403(b) Retirement Savings Plan announcements/guidelines as appended hereto; and</p>
-    <p class="subpoint">f. The parties acknowledge that this MOA includes the Hospital’s commitment to provide to bargaining unit employees any and all future wage, benefit and retirement adjustments provided to non-bargaining unit employees for the 2025 calendar year consistent with any guidelines established or announcements made. The Hospital agrees to provide notice to the Union not less than seven (7) calendar days prior to the implementation of any future wage, benefit and retirement adjustment to non-bargaining unit employees.</p>
-
-    <p>
-      2. The Hospital certifies that Paragraph 1 a. through e. represents all of the economic increases granted thus far to non-bargaining unit employees including Organ Donor Leave.
-    </p>
-
-    <p>
-      3. The Union recognizes that granting these increases retroactive to the dates they were implemented for non-bargaining unit employees represents an economic impact to the Hospital. Therefore, if the Hospital accepts this MOA, the Union agrees to the following.
-    </p>
-
-    <p class="subpoint">a. Accept the provisions stated in 1 a. through f. above as the entire economic package for the 2025 calendar year. The Union will not request any additional wage or benefit increases during bargaining for 2025 in exchange for this MOA.</p>
-    <p class="subpoint">b. The Union will withdraw with prejudice and take all steps necessary to encourage the NLRB to dismiss with prejudice any and all current unfair labor practice charges related in any way to the items identified in 1 a. through e. above.</p>
-    <p class="subpoint">c. The Union agrees that it will review and evaluate a list which Hospital provides within a reasonable time not to exceed forty-five (45) calendar days after this MOA is executed to confirm that the bargaining unit employees are receiving the proper adjustments consistent with Paragraph 1 a. through f. above. Once the Union has approved the list, Hospital will make payment under paragraph 1 a. above within a reasonable period of time not to exceed forty-five (45) calendar days.</p>
-  </div>
-</div>
 
 </details>
 
-  <section id="negotiation-updates">
+<section id="negotiation-updates">
   <h2>Negotiation Updates</h2>
-
-   <details>
-    <summary>August 7, 2025</summary>
-    <a href="update4.png" target="_blank">
-      <img src="update4.png" alt="Negotiation Update 3" />
-    </a>
-  </details>
-    
-  <details>
-    <summary>August 6, 2025</summary>
-    <a href="update3.png" target="_blank">
-      <img src="update3.png" alt="Negotiation Update 3" />
-    </a>
-  </details>
-
-  <details>
-    <summary>July 23–24, 2025</summary>
-    <a href="update2.png" target="_blank">
-      <img src="update2.png" alt="Negotiation Update 2" />
-    </a>
-  </details>
-
-  <details>
-    <summary>June 24, 2025</summary>
-    <a href="update1.png" target="_blank">
-      <img src="update1.png" alt="Negotiation Update 1" />
-    </a>
-  </details>
+  <!-- Negotiation update details here -->
 </section>
-<section id="faq-section">
-  <h2>Frequently Asked Questions</h2>
-
-  <details>
-    <summary>What is a Tentative Agreement?</summary>
-    <p>A Tentative Agreement (TA) is a proposed contract clause that both the union and the employer have agreed on but is not yet ratified by the union membership.</p>
-  </details>
-
-  <details>
-    <summary>What is an MOA?</summary>
-    <p>MOA stands for Memorandum of Agreement. It's a formal, binding agreement between the union and the employer. MOAs can be used to address urgent issues or resolve specific matters before a full contract is finalized or ratified.</p>
-  </details>
-  
-  <details>
-  <summary>How is a CBA article different from a hospital policy?</summary>
-  <p>Policies can be changed unilaterally by the employer at any time. A CBA cannot be changed without negotiation and approval from the union. That means your rights and benefits are protected by law, not just management's discretion.</p>
-</details>
-  
-  <details>
-  <summary>Can management change anything once the CBA is in place?</summary>
-  <p>No. Once a CBA is ratified, management must follow it. Any changes require negotiation with the union and agreement by both sides. This prevents sudden cuts to pay, PTO, staffing, health insurance, bonuses, job protections, and other terms and conditions of employment protected under the National Labor Relations Act (NLRA), such as discipline procedures, scheduling, and grievance rights.</p>
-</details>
-  
-  <details>
-    <summary>Can we still submit feedback on the TAs?</summary>
-    <p>Members are encouraged to share feedback with their union stewards or bargaining committee representatives. Your input helps shape the final agreement and future negotiations. We encourage membership involvement.</p>
-  </details>
-  
-  <details>
-    <summary>When is the final contract vote?</summary>
-    <p>The ratification vote will be scheduled after all sections have been tentatively agreed to. Updates will be shared as soon as that happens.</p>
-  </details>
-</section>
-    <footer>
-      <div class="container">
-        <p>© 2025 Teamsters Local 2024. All rights reserved.</p>
-      </div>
-    </footer>
+<footer>
+  <div class="container">
+    <p>© 2025 Teamsters Local 2024. All rights reserved.</p>
   </div>
+</footer>
+</div>
 </body>
 </html>
